# teslamate-llm-bridge

./: .env  .env.example  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  Dockerfile.release  README.md  docker-compose.yml  glama.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new-play.md
.github/workflows/: ci.yml  cla.yml  release-image.yml  validate-plays.yml
bridge/: pom.xml
docs/: architecture.md  connect-chatgpt.md  connect-claude-mcp.md  connect-codex.md  connect-coze.md  good-first-issues.md  image-generation.md  install-existing-teslamate.md  install-from-zero.md  install-test-plan.md  play-manifest-spec.md  quickstart-add-a-play.md  release.md  teslamate-readonly-role.sql
mcp-server/: README.md  pyproject.toml  server.py
ops/: teslamate-official-schema.sql
ops/demo/: demo-seed.sql
ops/fixture/: 01-fixture-data.sql
play-engine-core/: pom.xml
plays/: play.schema.json
plays-incubator/: README.md
plays-incubator/charging-procrastinator/: fixtures.yaml  play.yaml
plays-incubator/early-bird/: fixtures.yaml  play.yaml
plays-incubator/monthly-wrapped/: card.svg.tmpl  play.yaml
plays-incubator/night-owl/: card.svg.tmpl  fixtures.yaml  play.yaml
plays/_template/: card.svg.tmpl  fixtures.yaml  play.yaml
plays/ab-couple-souls/: card.svg.tmpl  creative-prompt.md  fixtures.yaml  play.yaml
plays/ac-dependency/: creative-prompt.md  fixtures.yaml  play.yaml
plays/altitude-climber/: creative-prompt.md  fixtures.yaml  play.yaml
tools/: validate_plays.py
(+92 files in other folders)
