[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teslamate-llm-bridge-mcp"
version = "0.1.0"
description = "MCP server for teslamate-llm-bridge — exposes play tools to Claude Desktop / Cursor / Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
teslamate-bridge-mcp = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["server.py"]

[tool.hatch.build.targets.sdist]
include = ["server.py", "README.md", "pyproject.toml"]
